<resources>
    <string name="app_name">WearFPS</string>
    <string name="action_settings">Settings</string>
    <string name="cpu">CPU</string>
    <string name="load">Load</string>
    <string name="temp">Temp </string>
    <string name="core">Core</string>
    <string name="gpu">GPU</string>
    <string name="percent_icon" translatable="false">%</string>
    <string name="pref_wear_enabled">Enable wear app</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_wear_settings">Wear settings</string>
    <string name="pref_wear_enabled_description">If you have a wearable, the app should be already installed</string>
    <string name="pref_cat_wear">Wear</string>
    <string name="pref_wear_autostart">Auto-start the app on the wearable</string>
    <string name="action_stop_server">Disconnect</string>

    <string name="pref_wear_screen">Wear settings</string>

    <string name="offline">Offline</string>

    <string name="placeholder_celsius" translatable="false">%dºC</string>
    <string name="placeholder_megahertz" translatable="false">%dMHz</string>

    <string name="finding_server">Finding server…</string>
    <string name="server_not_found">Server not found</string>
    <string name="server_ready">Ready</string>
    <string name="retry">Retry</string>
</resources>
