<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings"
    android:key="pref_screen">

    <SwitchPreference
        android:key="pref_wear_enabled"
        android:defaultValue="false"
        android:title="@string/pref_wear_enabled"
        android:summary="@string/pref_wear_enabled_description" />

    <Preference android:title="@string/pref_wear_screen"
        android:dependency="pref_wear_enabled">
        <intent android:targetPackage="me.oviedo.wearfps"
            android:targetClass="me.oviedo.wearfps.SettingsActivity"
            android:action="me.oviedo.wearfps.prefs.WEAR" />
    </Preference>

    <PreferenceCategory
        android:key="pref_test"
        android:title="Test">

        <CheckBoxPreference
            android:key="pref_4"
            android:title="Test"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_5"
            android:title="Test"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_6"
            android:title="Test"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_7"
            android:title="Test"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_8"
            android:title="Test"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_9"
            android:title="Test"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_10"
            android:title="Test"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_11"
            android:title="Test"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>