<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@android:drawable/ic_menu_send" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:layout_marginStart="5dp"
            android:text="@string/gpu"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/gpuNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <me.oviedo.wearfps.LoadView
            android:id="@+id/gpuLoadBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:percentage="0"
            app:backgroundColor="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gpuTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/core"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/gpuCoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
